[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqzone"
version = "0.0.0.1"
authors = [
  { name="Tu Xuan", email="tttuxan@outlook.com" },
]
description = "QQ空间协议封装"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/tttux/pyqzone"
"Bug Tracker" = "https://github.com/tttux/pyqzone/issues"